<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RateActivity"
    android:id="@+id/rateRelativeLayout">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_bill"
        android:id="@+id/labelBill"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:id="@+id/editTextBill"
        android:layout_toEndOf="@+id/labelBill"
        android:layout_alignBottom="@+id/labelBill"
        android:layout_toRightOf="@+id/labelBill" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_tip"
        android:id="@+id/labelTip"
        android:layout_alignBottom="@+id/editTextBill"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/textViewTip"
        android:layout_alignBottom="@+id/editTextBill"
        android:layout_toRightOf="@+id/labelTip"
        android:layout_toEndOf="@+id/labelTip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/checkbox_label"
        android:id="@+id/checkBoxLabel"
        android:layout_above="@+id/checkBoxOpinion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_friendy"
        android:onClick="onCheckboxClicked"
        android:id="@+id/checkBoxFriendly"
        android:checked="false"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/labelBill" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_specials"
        android:onClick="onCheckboxClicked"
        android:id="@+id/checkBoxSpecials"
        android:checked="false"
        android:layout_above="@+id/labelRadioGroup"
        android:layout_toRightOf="@+id/checkBoxFriendly"
        android:layout_toEndOf="@+id/checkBoxFriendly" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_opinion"
        android:id="@+id/checkBoxOpinion"
        android:onClick="onCheckboxClicked"
        android:layout_toEndOf="@+id/checkBoxSpecials"
        android:checked="false"
        android:layout_above="@+id/labelRadioGroup"
        android:layout_toRightOf="@+id/checkBoxSpecials" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/radio_group_label"
        android:id="@+id/labelRadioGroup"
        android:layout_below="@+id/checkBoxFriendly"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/labelRadioGroup"
        android:id="@+id/radioGroup">
        <RadioButton android:id="@+id/radioGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_good"
            android:onClick="onRadioButtonClicked"
            android:checked="false" />
        <RadioButton android:id="@+id/radioOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_ok"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radioBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_bad"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ps_spinner_label"
        android:id="@+id/spinnerLabelId"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/psSpinner"
        android:layout_below="@+id/spinnerLabelId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generous_label"
        android:id="@+id/switchGenerous"
        android:checked="false"
        android:layout_below="@+id/psSpinner"
        android:onClick="onSwitchClick"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/change_tip_value"
        android:id="@+id/textViewSlider"
        android:layout_below="@+id/switchGenerous"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarChangeTip"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textViewSlider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:max="@integer/slider_end"
        android:indeterminate="false"
        android:layout_toStartOf="@+id/labelTip"
        android:layout_toLeftOf="@+id/labelTip"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total_label"
        android:id="@+id/totalLabel"
        android:layout_toStartOf="@+id/textViewTotal"
        android:layout_below="@+id/seekBarChangeTip"
        android:layout_toRightOf="@+id/labelBill"
        android:layout_toEndOf="@+id/labelBill"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/textViewTotal"
        android:layout_toEndOf="@+id/labelRadioGroup"
        android:layout_alignBaseline="@+id/totalLabel"
        android:layout_alignBottom="@+id/totalLabel"
        android:layout_toRightOf="@+id/labelRadioGroup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/chrono_label"
        android:id="@+id/chronoLabel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chrono"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/chronoLabel"
        android:layout_toEndOf="@+id/chronoLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tip_percent_label"
        android:id="@+id/textViewTipPercentLabel"
        android:layout_alignBottom="@+id/textViewSlider"
        android:layout_alignLeft="@+id/chrono"
        android:layout_alignStart="@+id/chrono" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textViewTipPercent"
        android:layout_alignTop="@+id/seekBarChangeTip"
        android:layout_alignLeft="@+id/textViewTipPercentLabel"
        android:layout_alignStart="@+id/textViewTipPercentLabel"
        android:layout_alignRight="@+id/textViewTipPercentLabel"
        android:layout_alignEnd="@+id/textViewTipPercentLabel" />


</RelativeLayout>
